--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,14 +6,14 @@
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
+    "navigationBarBackgroundColor": "#FFF68F",
     "navigationBarTitleText": "Let's eat！",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
     "color": "#fff",
     "selectedColor": "#33ccff",
-    "backgroundColor": "#000000",
+    "backgroundColor": "#FFF68F",
     "list": [
       {
         "text": "",
