--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -32,6 +32,11 @@
       }
     ]
   },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "sitemapLocation": "sitemap.json",
   "style": "v2"
 }
