增加 ”添加标记点“ 功能

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/eat/eat",
     "pages/user/user",
     "pages/market/market",
-    "pages/random/random"
+    "pages/random/random",
+    "pages/addMarker/addMarker"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
