设置定时推送为上课前30分钟

--- a/project.config.json
+++ b/project.config.json
@@ -9,6 +9,7 @@
 		"minified": true,
 		"newFeature": true,
 		"coverView": true,
+		"nodeModules": false,
 		"autoAudits": false,
 		"checkInvalidKey": true,
 		"checkSiteMap": true,
@@ -17,8 +18,7 @@
 			"ignore": [],
 			"disablePlugins": [],
 			"outputPath": ""
-		},
-		"nodeModules": false
+		}
 	},
 	"appid": "wx9339985e6fae83dc",
 	"projectname": "Let's%20eat",
