--- a/cloudfunctions/saveFormData/package.json
+++ b/cloudfunctions/saveFormData/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "wx-server-sdk": "latest"
+    "moment": "^2.24.0",
+    "wx-server-sdk": "^1.8.2"
   }
 }
