--- a/project.config.json
+++ b/project.config.json
@@ -66,7 +66,7 @@
 					"id": 2,
 					"name": "pages/market/market",
 					"pathName": "pages/market/market",
-					"query": "longitude= 113.454330&latitude=23.26161",
+					"query": "longitude= 113.454330&latitude=23.26161&address=tianhexyuan",
 					"scene": 1036,
 					"referrerInfo": {}
 				}
